--- a/index.css
+++ b/index.css
@@ -57,6 +57,10 @@ body {
   animation-play-state: paused;
 }
 
+.music-container.play .img-container img {
+  animation-play-state: running;
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
@@ -65,4 +69,68 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.action-btn {
+  background-color: #fff;
+  border: 0;
+  color: rgb(225, 210, 194);
+  font-size: 20px;
+  cursor: pointer;
+  margin: 0 20px;
+}
+
+.action-btn-big {
+  color: rgb(151, 145, 139);
+  font-size: 30px;
+}
+
+.action-btn:focus {
+  outline: 0;
+}
+
+.music-info {
+  background-color: rgb(255, 255, 255, 0.5);
+  border-radius: 15px 15px 0 0;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  width: calc(100% - 40px);
+  padding: 10px 10px 10px 150px;
+  opacity: 0;
+  transform: translateY(0%);
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+}
+
+.music-info h4 {
+  margin: 0;
+}
+
+.music-container.play .music-info {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.progress-bar {
+  background-color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px;
+  height: 4px;
+  width: 100%;
+}
+
+.progress {
+  background-color: pink;
+  border-radius: 5px;
+  height: 100%;
+  width: 50%;
+  transition: width 0.1s linear;
 }
